--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "mongoose": "^5.11.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "socket.io": "^3.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -38,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "main": "index.js",
+  "main": "server.js",
   "repository": "https://github.com/Vicki20Rous/Google-Book-Search.git",
   "author": "Victoria Rouser <vic86rous@gmail.com>",
   "license": "MIT"
