--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "superagent": "^6.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
