--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
     "express": "^4.17.1",
-    "install": "^0.13.0",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.11.18",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -44,5 +41,14 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vicki20Rous/Google-Book-Search.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Vicki20Rous/Google-Book-Search/issues"
+  },
+  "homepage": "https://github.com/Vicki20Rous/Google-Book-Search"
 }
