--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "superagent": "^6.1.0",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.3"
+   
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,10 +41,9 @@
     ]
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "server.js",
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vicki20Rous/Google-Book-Search.git"
